Hide overflow-x explicitly (Fixes #133) (#216)

--- a/styles/components/_container.scss
+++ b/styles/components/_container.scss
@@ -15,6 +15,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: scroll;
+  overflow-x: hidden;
   .container {
     padding: 1rem 1rem 0 1rem;
     @media (max-width: 480px) {
